# Idea-Manager

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  __main__.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: main.yml
app/: __main__.py
app/idea_manager/: __init__.py  exceptions.py  ideas.py  models.py  todo.py  tools.py
db/: idea_schema.json
idea_manager/: __init__.py  __main__.py  ideas.py  todo.py
